--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,8 @@ h1{
   margin-top: 0;
   padding: 1.85% 0;
   border-radius: 10px;
+  font-weight: bold;
+  font-size: 5rem;
 }
 
 .formInformations{
@@ -55,6 +57,7 @@ h1{
   margin-left: 20px;
   margin-right: 20px;
   padding-top: 10px;
+  padding-bottom: 10px;
   color: #FFF;
   background-color: #4081ec;
   border-radius: 10px;
@@ -65,4 +68,8 @@ h1{
   text-align: center;
   align-content: center;
   align-self: center;
+}
+
+.info{
+  padding: 1rem;
 }
